--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-alura" src="alura1.png" alt="logo da alura start">
-        <img class="cabecalho-imagem" src="logocivico.png" alt="logo da alura start">
+        <img class="cabecalho-alura" src="@mangalargamachador" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="@pedrinho_biel_2107" alt="logo da alura start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
