--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Essas são as raças da minha preferencia </h2>
-            <p class="escola-texto-um">SÃO CAVALOS DE RODEIO,  EXPOSIÇÃO, PARA TER DE PET E OUTROS</p>
+            <h2 class="escola-titulo">SÃO CAVALOS DE RODEIO,  EXPOSIÇÃO, PARA TER DE PET E OUTROS</h2>
             
     </section>
     <section class="estudante">
