--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             
     </section>
     <section class="estudante">
-        <h2 class="estudante-titulo">Quem são nossos estudantes do 2°C das Ciências da Natureza?</h2>
+        <h2 class="estudante-titulo">Quais são eles?</h2>
         <div class="estudante-todos">
             <div class="estudante-div">
                 <img class="estudante-imagem" src="prof.antonio.jpeg" alt="foto do Antonio">
