--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h2 class="estudante-titulo">Quais são eles?</h2>
         <div class="estudante-todos">
             <div class="estudante-div">
-                <img class="estudante-imagem" src="prof.antonio.jpeg" alt="foto do Antonio">
-                <h3 class="estudante-nome">Professor Antonio</h3>
+                <img class="estudante-imagem" src="cavalo1.jpeg" alt="foto do Antonio">
+                <h3 class="estudante-nome">Percheron</h3>
                 <a href="https://github.com/antoniocam84/antoniocam84"><img class="estudante-icone" src="github.png" alt="icone github"></a>
                 <a href=""><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
                 <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
