--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </div>
        
         <div class="estudante-div">
-            <img class="estudante-imagem" src="ana.jpeg" alt="foto do cavalo">
-            <h3 class="estudante-nome">Cri</h3>
+            <img class="estudante-imagem" src="cavalo2.jpeg" alt="foto do cavalo">
+            <h3 class="estudante-nome">Crioulo</h3>
             <a href="https://github.com/oliveiraxwm"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/ana-luiza-o-09566432a/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/oliveiraxwm?igsh=MXN5bTJrbmwwbXBnNg==&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
