--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="cavalo2.jpeg" alt="foto do cavalo">
             <h3 class="estudante-nome">Crioulo</h3>
-            
+
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="antonio.jpeg" alt="foto do Antonio Zampieri">
-            <h3 class="estudante-nome">Antonio Zampieri</h3>
+            <img class="estudante-imagem" src="cavalo3.jpeg" alt="foto do cavalo">
+            <h3 class="estudante-nome">Argentino</h3>
             <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
