--- a/index.html
+++ b/index.html
@@ -42,12 +42,9 @@
         </div>
       
         <div class="estudante-div">
-            <img class="estudante-imagem" src="felipe.jpeg" alt="foto da joice">
-            <h3 class="estudante-nome">Felipe Pereira</h3>
-            <a href="https://github.com/PeboFds/FelipeP"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/felipe-pereira-6b116332b/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/pebo_fds/?authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
-        </div>
+            <img class="estudante-imagem" src="cavalo5.jpeg" alt="foto do cavalo">
+            <h3 class="estudante-nome">Friesian</h3>
+         
         <div class="estudante-div">
             <img class="estudante-imagem" src="gabriella.jpeg" alt="foto da maria">
             <h3 class="estudante-nome">Gabriela Lacerda</h3>
