--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="cavalo5.jpeg" alt="foto do cavalo">
             <h3 class="estudante-nome">Friesian</h3>
+        </div>
          
         <div class="estudante-div">
             <img class="estudante-imagem" src="gabriella.jpeg" alt="foto da maria">
