--- a/index.html
+++ b/index.html
@@ -48,12 +48,9 @@
         </div>
          
         <div class="estudante-div">
-            <img class="estudante-imagem" src="gabriella.jpeg" alt="foto da maria">
-            <h3 class="estudante-nome">Gabriela Lacerda</h3>
-            <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/gabriela-lacerda-rodrigues-04566432a/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/gablacerda?igsh=d2dyajkzZHJmamJo&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
-        </div>
+            <img class="estudante-imagem" src="cavalo6.jpeg" alt="foto da maria">
+            <h3 class="estudante-nome">Marwari</h3>
+            
         <div class="estudante-div">
             <img class="estudante-imagem" src="isabeller.jpeg" alt="foto da olhe">
             <h3 class="estudante-nome">Isabelle Ribeiro</h3>
