--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
          
         <div class="estudante-div">
-            <img class="estudante-imagem" src="cavalo6.jpeg" alt="foto da maria">
+            <img class="estudante-imagem" src="cavalo6.jpeg" alt="foto do cavalo">
             <h3 class="estudante-nome">Marwari</h3>
         
         </div>   
