--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>   
         
         <div class="estudante-div">
-            <img class="estudante-imagem" src="cavalo4.jpeg" alt="foto do cavalo">
+            <img class="estudante-imagem" src="cavalo4.jpg" alt="foto do cavalo">
             <h3 class="estudante-nome">paint horse</h3>
             
         </div>
