--- a/index.html
+++ b/index.html
@@ -60,11 +60,9 @@
         </div>
        
         <div class="estudante-div">
-            <img class="estudante-imagem" src="jack.jpeg" alt="foto da rafa">
-            <h3 class="estudante-nome">Jack Almario</h3>
-            <a href="https://github.com/jackk62/jackk62.git"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="cavalo8.jpeg" alt="foto do cavalo">
+            <h3 class="estudante-nome">Appaloosa</h3>
+            
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="joao.jpeg" alt="foto da thais">
