--- a/index.html
+++ b/index.html
@@ -65,11 +65,9 @@
             
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="joao.jpeg" alt="foto da thais">
-            <h3 class="estudante-nome">João Victor Guimarães</h3>
-            <a href="https://github.com/BrisaJV"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/joao-ricchieiro-68b653322/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="cavalo9.jpeg" alt="foto do cavalo">
+            <h3 class="estudante-nome">Clydesdale</h3>
+            
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="kenzo.jpeg" alt="foto da rafa">
