--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="cavalo9.jpeg" alt="foto do cavalo">
+            <img class="estudante-imagem" src="cavalo9.jpg" alt="foto do cavalo">
             <h3 class="estudante-nome">Clydesdale</h3>
             
         </div>
