--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
             <div class="estudante-div">
                 <img class="estudante-imagem" src="cavalo1.jpeg" alt="foto do cavalo">
                 <h3 class="estudante-nome">Percheron</h3>
-                <a href="https://github.com/antoniocam84/antoniocam84"><img class="estudante-icone" src="horse.png" alt="icone horse"></a>
+                <a href="https://www.herdbook.org.br/site/racasequinas/details/25"><img class="estudante-icone" src="horse.png" alt="icone horse"></a>
             <a href="https://www.linkedin.com/in/ana-luiza-o-09566432a/"><img class="estudante-icone" src="knowledge.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
-                
+
             </div>
        
         <div class="estudante-div">
