--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img class="estudante-imagem" src="cavalo1.jpeg" alt="foto do cavalo">
                 <h3 class="estudante-nome">Percheron</h3>
                 <a href="https://www.herdbook.org.br/site/racasequinas/details/25"><img class="estudante-icone" src="horse.png" alt="icone horse"></a>
-            <a href="https://www.linkedin.com/in/ana-luiza-o-09566432a/"><img class="estudante-icone" src="knowledge.png" alt="icone linkedin"></a>
+            <a href="https://www.herdbook.org.br/site/racasequinas/details/25"><img class="estudante-icone" src="knowledge.png" alt="icone knowledge"></a>
 
             </div>
        
