--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Essas são as raças da minha preferencia </h2>
             <h2 class="escola-titulo">SÃO CAVALOS DE RODEIO,  EXPOSIÇÃO, PARA TER DE PET E OUTROS</h2>
+            <p>Há duas hipóteses para a formação da espécie eqüina. A primeira é que eles seriam originários de cavalos da Ásia Central, a segunda, de animais da América Setentrional, de onde emigraram para a Ásia, quando o Alasca ainda era ligado àquele continente pelo estreito de Bering (TEIXEIRA, 1995). </p>
             
     </section>
     <section class="estudante">
