--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="cavalo2.jpeg" alt="foto do cavalo">
             <h3 class="estudante-nome">Crioulo</h3>
+            <a href="https://"> <img class="estudante-icone" src="horse.png" alt="icone horse"></a>
+            <a href="https://www.herdbook.org.br/site/racasequinas/details/25"><img class="estudante-icone" src="knowledge.png" alt="icone knowledge"></a>
+
 
         </div>
         <div class="estudante-div">
